crates/cli/tests/snapshots/list_concat_merge__fix_1274c4e0cd15f1ee19771fdbe224795d74fb9e02b661299b8d75b5a17de60c3e.snap
---
source: crates/cli/tests/list_concat_merge.rs
assertion_line: 5
expression: "\"\\n        base\\n        ++ [ a b ]\\n        ++ [ c d ]\\n        ++ tail\\n        \""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,6 +1,4 @@
 
         base
-        ++ [ a b ]
-        ++ [ c d ]
-        ++ tail
+        ++ [ a b c d ] ++ tail
