crates/cli/tests/snapshots/list_concat_merge__fix_326f1eb949f22e7c9b817679bac9562b3857b2e8cc3ac0d2e134fcc76c2131c0.snap
---
source: crates/cli/tests/list_concat_merge.rs
expression: "\"[ piAgentsPkg piCodexFastPkg ] ++ lib.optionals cfg.rtk.enable [ piRtkPkg ] ++ [ piCompactToolsPkg piToolManagementPkg ]\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-[ piAgentsPkg piCodexFastPkg ] ++ lib.optionals cfg.rtk.enable [ piRtkPkg ] ++ [ piCompactToolsPkg piToolManagementPkg ]
+[ piAgentsPkg piCodexFastPkg piCompactToolsPkg piToolManagementPkg ] ++ lib.optionals cfg.rtk.enable [ piRtkPkg ]
