crates/cli/tests/snapshots/list_concat_merge__fix_513704f803bef4e55c42e9f2d2bc867303c9fffc802b460de97a6a78db6e1bc9.snap
---
source: crates/cli/tests/list_concat_merge.rs
expression: "\"[ veryLongPackageName1 veryLongPackageName2 ] ++ lib.optionals cfg.enable [ pkg ] ++ [ veryLongPackageName3 veryLongPackageName4 ]\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-[ veryLongPackageName1 veryLongPackageName2 ] ++ lib.optionals cfg.enable [ pkg ] ++ [ veryLongPackageName3 veryLongPackageName4 ]
+[ veryLongPackageName1 veryLongPackageName2 veryLongPackageName3 veryLongPackageName4 ] ++ lib.optionals cfg.enable [ pkg ]
