crates/cli/tests/snapshots/list_concat_merge__fix_62249a38f2ce16eab22a791b5fe6c7a9cb35886d6d9c02310781e54c85bf7890.snap
---
source: crates/cli/tests/list_concat_merge.rs
assertion_line: 5
expression: "\"[ a ] ++ [ b c ] ++ tail\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-[ a ] ++ [ b c ] ++ tail
+[ a b c ] ++ tail
