crates/cli/tests/snapshots/list_concat_merge__fix_79f8c7dcf8cf53a4d3d6050ad9e37e15dc055dc06082e0f4fc606f86bebe5bcc.snap
---
source: crates/cli/tests/list_concat_merge.rs
expression: "\"[ a b c ] ++ lib.optionals cfg.someCond [ d ] ++ [ e f g ]\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-[ a b c ] ++ lib.optionals cfg.someCond [ d ] ++ [ e f g ]
+[ a b c e f g ] ++ lib.optionals cfg.someCond [ d ]
