crates/cli/tests/snapshots/list_concat_merge__fix_7b10fce7579408aa0383a7da9aafe166508431f3de427b5e28b1ad1cf371c104.snap
---
source: crates/cli/tests/list_concat_merge.rs
expression: "\"[ x y ] ++ lib.optional cond [ z ] ++ [ n m ]\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-[ x y ] ++ lib.optional cond [ z ] ++ [ n m ]
+[ x y n m ] ++ lib.optional cond [ z ]
