crates/cli/tests/snapshots/list_concat_merge__fix_7d1a476f4a021414dfb88271d3ac24d14f2a6e99c0e80023b23408f98e62ed44.snap
---
source: crates/cli/tests/list_concat_merge.rs
expression: "\"[ a b ] ++ [ c d ] ++ [ e f ]\""
---

