crates/cli/tests/snapshots/list_concat_merge__fix_d429c2b9d85d6e1f62a114663387039b428656c21f875da0c5d633e6c00b37dd.snap
---
source: crates/cli/tests/list_concat_merge.rs
assertion_line: 5
expression: "\"base ++ [ a ] ++ [ b c ]\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-base ++ [ a ] ++ [ b c ]
+base ++ [ a b c ]
