crates/cli/tests/snapshots/list_concat_merge__fix_df852263274fb00f23be153f680f46ebe6aa6a316aca78ae704af8e0f0a5fd8e.snap
---
source: crates/cli/tests/list_concat_merge.rs
expression: "\"[ a b ] ++ lib.optionals cfg.enable [ x ] ++ [ d e ]\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-[ a b ] ++ lib.optionals cfg.enable [ x ] ++ [ d e ]
+[ a b d e ] ++ lib.optionals cfg.enable [ x ]
